Entity changes colour depending on inventory

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,17 +29,9 @@ dist.jar=${dist.dir}/FYP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.neat-0.9.jar=n\\neat-0.9.jar
-file.reference.neuroph-core-2.94.jar=n\\neuroph-core-2.94.jar
-file.reference.slf4j-api-1.7.25.jar=n\\slf4j-api-1.7.25.jar
-file.reference.slf4j-jdk14-1.7.25.jar=n\\slf4j-jdk14-1.7.25.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.neuroph-core-2.94.jar}:\
-    ${file.reference.slf4j-api-1.7.25.jar}:\
-    ${file.reference.slf4j-jdk14-1.7.25.jar}:\
-    ${file.reference.neat-0.9.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
